# competitive-programming

./: .gitignore  Makefile  README.md  cf784a.py  cf784e.py  cf784f.py  cf784g.py  cf784g_2.py  main.py  profile.prof  pyproject.toml  run.sh  sample.py  scores.txt  scoring.sh  solver.py  total_score.txt
AOJ/ITP1_1/: a.cpp  a.out  b.cpp  c.cpp  d.cpp
AOJ/ITP1_2/: a.cpp  a.out  b.cpp  c.cpp  (+1 more)
abs/: Cargo.toml
ahc003/: Cargo.toml
ahc014/: README.md  pyproject.toml
atcoder/: abc001_2.py  abc001_3.py  abc001_4.py  abc002_1.py  abc002_2.py  abc003_1.py  abc003_2.py  abc004_2.py  abc004_3.py  abc005_1.py  abc005_2.py  abc006_1.py  abc006_2.py  abc006d.py  abc006d_2.py  abc006d_3.py  abc007_2.py  abc008_1.py  abc008_2.py  abc009_2.py  abc010_2.py  abc011_1.py  abc011_2.py  abc012_1.py  abc012_2.py  abc013_1.py  abc013_2.py  abc014_1.py  abc014_2.py  abc015_1.py  abc015_2.py  abc016_1.py  abc016_2.py  abc017_1.py  abc017_2.py  abc018_1.py  abc018_2.py  abc019_2.py  abc020_a.py  abc020_b.py  (+141 more)
codefes2016_a/: a.py  b.py  c.py  d.py
codefes2016_b/: a.py  b.py  c.py  c2.py  d.py
codefes2016_c/: a.py  b.py  c.py  d.py  d2.py
codefes2017_c/: a.py  b.py  c.py
gcj2018/: 1.py  3.py
gcj2019/: 1Ba.py  qualA.py  qualB.py
mujin_con/: a.py  b.py  d.py
other/: WA2_increasing_sequence.py  WA_increasing_sequence.py  increasing_sequence.py  ribbon.py
python/: sample_submission.py
rust/: Cargo.toml
tenka1_2016/: a.py
tenka1_2016b/: tena.py  tenb.py  tenc.py
tenka1_2017/: a.py
tests/: test_line.py  test_solver.py
tools/: .gitignore  test.zsh
topcoder/: srm717a.py
(+105 files in other folders)
