[tool.poetry]
name = "ahc014"
version = "0.1.0"
description = ""
authors = ["zfhrp <zfhrp6@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
